--- a/test/test.vcxproj
+++ b/test/test.vcxproj
@@ -86,6 +86,7 @@
     <ClInclude Include="testhash.h" />
     <ClInclude Include="testqhash.h" />
     <ClInclude Include="testptrie.h" />
+    <ClInclude Include="teststdmap.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
   <ImportGroup Label="ExtensionTargets">
