Final tests added.

--- a/test/test.vcxproj
+++ b/test/test.vcxproj
@@ -42,13 +42,13 @@
       <Optimization>Disabled</Optimization>
       <DebugInformationFormat>ProgramDatabase</DebugInformationFormat>
       <RuntimeLibrary>MultiThreadedDebugDLL</RuntimeLibrary>
-      <AdditionalIncludeDirectories>.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName);$(QTDIR)\include\QtCore;$(SADDY_INCLUDE);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
+      <AdditionalIncludeDirectories>.;$(QTDIR)\include;.\GeneratedFiles\$(ConfigurationName);$(QTDIR)\include\QtCore;$(SADDY_INCLUDE);$(BOOST);$(GOOGLE_SPARSEHASH);%(AdditionalIncludeDirectories)</AdditionalIncludeDirectories>
       <TreatWChar_tAsBuiltInType>true</TreatWChar_tAsBuiltInType>
     </ClCompile>
     <Link>
       <SubSystem>Console</SubSystem>
       <OutputFile>$(OutDir)\$(ProjectName).exe</OutputFile>
-      <AdditionalLibraryDirectories>$(QTDIR)\lib;$(SADDY_LIB);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
+      <AdditionalLibraryDirectories>$(QTDIR)\lib;$(SADDY_LIB);$(GOOGLE_SPARSEHASH);%(AdditionalLibraryDirectories)</AdditionalLibraryDirectories>
       <GenerateDebugInformation>true</GenerateDebugInformation>
       <AdditionalDependencies>qtmaind.lib;Qt5Cored.lib;saddy-debug.lib;OPENGL32.lib;GLU32.lib;%(AdditionalDependencies)</AdditionalDependencies>
     </Link>
@@ -83,9 +83,11 @@
     <ClInclude Include="old\hptrie_src.hpp" />
     <ClInclude Include="old\hsptrie.hpp" />
     <ClInclude Include="old\hsptrie_src.hpp" />
+    <ClInclude Include="testboostmap.h" />
     <ClInclude Include="testhash.h" />
     <ClInclude Include="testqhash.h" />
     <ClInclude Include="testptrie.h" />
+    <ClInclude Include="testdensehashmap.h" />
     <ClInclude Include="teststdmap.h" />
   </ItemGroup>
   <Import Project="$(VCTargetsPath)\Microsoft.Cpp.targets" />
